--- a/src/_components.scss
+++ b/src/_components.scss
@@ -1,33 +1,38 @@
 @use "./variables" as *;
 
-.header-section {
+.header {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    gap: 1rem; 
-    padding-bottom: 2rem;
-}
 
-.cat-img {
-    max-width: 7rem;
-    max-height: auto;
-    margin-left: 1rem;
+    &__text {
+        font-family: $font-headers;
+        font-size: 2rem;
+        //color: rgb(239, 205, 255);
+        color: white;
+        font-weight: 600;
+    }
+
+    &__cat {
+        margin-top: 2rem;
+        max-width: 7rem;
+        max-height: auto;
+    }
 }
 
 main {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0;
-    padding: 0;
 }
 
 .calculator {
+    margin-bottom: 2rem;
 
     &__button {
-        width: 3rem;
-        height: 3rem;
+        width: 3.2rem;
+        height: 3.2rem;
         border-radius: 1.5rem;
         background-color: $color-white;
         border: 1px solid #d1d1d1;
@@ -35,15 +40,52 @@ main {
         font-weight: 600;
         color: $color-text;
         margin: 0.1rem;
+        display: flex;
+        justify-content: center;
+        align-items: center; 
 
         &:hover {
-            background-color: #e0e0e0;
+            //background-color: #e0e0e0;
+            background-color: $color-lavender;
+        }
+
+        &--equal {
+            width: 6.5rem;
+            height: 3rem;
+            border-radius: 1rem;
+            background-color: $color-green;
         }
     }
 
+    &__button-clear {
+        background-color: $color-lavender;
+    }
+
+    &__button-negate {
+        background-color: $color-cherub;
+    }
+
+    &__button-percent {
+        background-color: $color-primary;
+    }
+
+    &__button-divide {
+        background-color: $color-primary;
+    }
+
+    &__button-multiply {
+        background-color: $color-primary;
+    }
+
+    &__button-minus {
+        background-color: $color-primary;
+    }
+
+    &__button-plus {
+        background-color: $color-primary;
+    }
+
     &__img {
-        background: transparent;
         opacity: 0.5;
     }
-    
 }
