--- a/src/_layout.scss
+++ b/src/_layout.scss
@@ -1,11 +1,13 @@
 @use "./variables" as *;
 
 .calculator {
-    background-color: $color-primary;
+    background-color: $color-white;
     width: 16rem; 
     height: auto;
     display: grid;
-    margin: 1rem 1rem;
+    gap: 0.1rem;
+    margin: 1rem;
+    padding: 0.6rem;
     grid-template-rows: repeat(7, 1fr);
     grid-template-columns: repeat(4, 1fr);
     grid-template-areas: "history history history history"
@@ -15,7 +17,6 @@
         "four five six minus"
         "one two three plus"
         "num_zero dec equals equals";
-    border: 1px solid $color-secondary;
     border-radius: 1rem;
     box-shadow: -3px 5px 12px rgba(0,0,0,0.3);
 
