--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -6,12 +6,14 @@ $font-body: "Poppins", sans-serif;
 $font-headers: "Indie Flower", sans-serif;
 
 /* Color palette for the calculator project */
-$color-white: #FFFFFF;
+$color-white: #e0e0e0;
 $color-black: #000000;
 $color-primary: #FFC2D1;
 $color-secondary: #FFB3C6;
 $color-tertiary: #FF8FAB;
-$color-peach: #EE959E;
 $color-green: #D5E7B8;
-$color-green2: #C4DEA4;
 $color-text: #808080;
+$color-gentle-lavender: #D4f0f7;
+$color-lavender: #D0D5F7;
+$color-tropical-blue: #B8CFEC;
+$color-cherub: #F6DAE4;
