--- a/src/main.scss
+++ b/src/main.scss
@@ -11,7 +11,7 @@
 }
 
 body {
-    background: linear-gradient(to bottom, rgb(245, 214, 243), #b9b0f5);
+    background: linear-gradient(to right bottom, rgb(240, 198, 247), rgb(158, 197, 239));
     height: 100vh;
     width: 100vw; 
 }
