--- a/src/main.scss
+++ b/src/main.scss
@@ -30,14 +30,20 @@ html {
 @media screen and (min-width: 1024px) {
 
     html {
-        font-size: 20px;
+        font-size: 19px;
     }
 }
 
 @media screen and (min-width: 1440px) {
 
     html {
-        font-size: 22px;
+        font-size: 20px;
     }
 }
 
+@media screen and (min-width: 2560px) {
+
+    html {
+        font-size: 26px;
+    }
+}
