--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -17,4 +17,6 @@ $color-text: #808080;
 $color-gentle-lavender: #D4f0f7;
 $color-lavender: #D0D5F7;
 $color-tropical-blue: #B8CFEC;
-$color-cherub: #F6DAE4;
+$color-violet: #E9D3FF;
+$color-lily: #CDB7F6;
+$color-dark-violet: #966FD6;
