Added more functionalities

--- a/src/_layout.scss
+++ b/src/_layout.scss
@@ -3,7 +3,7 @@
 .calculator {
     background-color: $color-white;
     width: 16rem; 
-    height: auto;
+    height: 26rem;
     display: grid;
     gap: 0.1rem;
     margin: 1rem;
