--- a/src/main.scss
+++ b/src/main.scss
@@ -14,6 +14,7 @@ body {
     background: linear-gradient(to right bottom, rgb(240, 198, 247), rgb(158, 197, 239));
     height: 100vh;
     width: 100vw; 
+    background-attachment: fixed;
 }
 
 html {
