--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -11,12 +11,12 @@ $color-white: #e0e0e0;
 $color-black: #000000;
 $color-primary: #FFC2D1;
 $color-secondary: #FFB3C6;
-$color-tertiary: #FF8FAB;
 $color-green: #D5E7B8;
 $color-text: #808080;
 $color-gentle-lavender: #D4f0f7;
 $color-lavender: #D0D5F7;
 $color-tropical-blue: #B8CFEC;
-$color-violet: #E9D3FF;
 $color-lily: #CDB7F6;
 $color-dark-violet: #966FD6;
+$color-raspberry: #E0BBE4;
+$color-cornflower: #AFD7FD;
